--- a/perception/rwth_people_tracker/rwth_pedestrian_tracking/package.xml
+++ b/perception/rwth_people_tracker/rwth_pedestrian_tracking/package.xml
@@ -22,7 +22,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>rwth_perception_people_msgs</build_depend>
-  <build_depend>spencer_tracking_msgs</build_depend>
+  <build_depend>frame_msgs</build_depend>
   <build_depend>libqt4-dev</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>eigen</build_depend>
@@ -33,7 +33,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>rwth_perception_people_msgs</run_depend>
-  <run_depend>spencer_tracking_msgs</run_depend>
+  <run_depend>frame_msgs</run_depend>
   <run_depend>libqt4-dev</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>eigen</run_depend>
