--- a/perception/rwth_people_tracker/rwth_upper_body_detector/package.xml
+++ b/perception/rwth_people_tracker/rwth_upper_body_detector/package.xml
@@ -25,7 +25,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>libqt4-dev</build_depend>
   <build_depend>image_transport</build_depend>
-  <build_depend>spencer_tracking_msgs</build_depend>
+  <build_depend>frame_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -34,7 +34,7 @@
   <run_depend>rwth_perception_people_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>libqt4-dev</run_depend>
-  <run_depend>spencer_tracking_msgs</run_depend>
+  <run_depend>frame_msgs</run_depend>
 
   <export/>
 </package>
