adjusting spencer visualization to frame purposes

--- a/visualization/spencer_tracking_rviz_plugin/package.xml
+++ b/visualization/spencer_tracking_rviz_plugin/package.xml
@@ -14,14 +14,10 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>rviz</build_depend>
-  <build_depend>spencer_tracking_msgs</build_depend>
-  <build_depend>spencer_social_relation_msgs</build_depend>
-  <build_depend>spencer_human_attribute_msgs</build_depend>
+  <build_depend>frame_msgs</build_depend>
   
   <run_depend>rviz</run_depend>
-  <run_depend>spencer_tracking_msgs</run_depend>
-  <run_depend>spencer_social_relation_msgs</run_depend>
-  <run_depend>spencer_human_attribute_msgs</run_depend>
+  <run_depend>frame_msgs</run_depend>
 
 
   <export>
