--- a/perception/rwth_people_tracker/rwth_ground_hog/package.xml
+++ b/perception/rwth_people_tracker/rwth_ground_hog/package.xml
@@ -22,7 +22,7 @@
   <build_depend>message_filters</build_depend>
   <build_depend>libqt4-dev</build_depend>
   <build_depend>image_transport</build_depend>
-  <build_depend>spencer_tracking_msgs</build_depend>
+  <build_depend>frame_msgs</build_depend>
 
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
@@ -31,7 +31,7 @@
   <run_depend>message_filters</run_depend>
   <run_depend>libqt4-dev</run_depend>
   <run_depend>image_transport</run_depend>
-  <run_depend>spencer_tracking_msgs</run_depend>
+  <run_depend>frame_msgs</run_depend>
   
   <export/>
 </package>
