--- a/yoloconvertor/package.xml
+++ b/yoloconvertor/package.xml
@@ -18,6 +18,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>rwth_perception_people_msgs</build_depend>
   <build_depend>message_filters</build_depend>
   <build_depend>frame_msgs</build_depend>
@@ -31,6 +32,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>nav_msgs</run_depend>
   <run_depend>rwth_perception_people_msgs</run_depend>
   <run_depend>message_filters</run_depend>
   <run_depend>frame_msgs</run_depend>
