--- a/trtyolo/CMakeLists.txt
+++ b/trtyolo/CMakeLists.txt
@@ -7,7 +7,12 @@ project(trtyolo)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED roscpp rospy std_msgs message_filters darknet_ros_msgs image_transport cv_bridge)
+set(CMAKE_BUILD_TYPE Release)
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+    set(CMAKE_CXX_FLAGS "-O3")        ## Optimize
+endif()
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -99,9 +104,9 @@ find_package(catkin REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES trtyolo
-#  CATKIN_DEPENDS other_catkin_pkg
+  INCLUDE_DIRS ../yoloconvertor/include
+#  LIBRARIES convert_yolo
+#  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -111,9 +116,8 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories(
-# include
-# ${catkin_INCLUDE_DIRS}
+include_directories( include
+  ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
