interege the tensorRTyolo code

--- a/yoloconvertor/CMakeLists.txt
+++ b/yoloconvertor/CMakeLists.txt
@@ -69,11 +69,20 @@ catkin_package(
 ## Build ##
 ###########
 
+#add wrapper
+set(TRT_WRAPPER_DIR tensorRT_yolo/tensorRTWrapper/code)
+add_subdirectory(${TRT_WRAPPER_DIR})
+include_directories(${TRT_WRAPPER_DIR}/include)
+
+
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories( include
   ${catkin_INCLUDE_DIRS}
+
+  # for tensorRT_yolo
+  tensorRT_yolo/include
 )
 
 ## Declare a cpp library
@@ -88,7 +97,7 @@ add_executable(yoloconvertor_panorama src/main_panorama.cpp)
 add_executable(yoloconvertor_fusion src/main_fusion.cpp)
 add_executable(backprojection_panorama src/main_backproject_panorama.cpp)
 add_executable(backprojection_pinhole src/main_backproject_pinhole.cpp)
-add_executable(tensorrt_yolo src/main_tensorrtyolo.cpp)
+add_executable(tensorrt_yolo src/main_tensorrtyolo.cpp tensorRT_yolo/eval.cpp tensorRT_yolo/dataReader.cpp)
 
 
 ## Add cmake target dependencies of the executable/library
@@ -99,6 +108,7 @@ add_dependencies(yoloconvertor_fusion ${catkin_EXPORTED_TARGETS})
 add_dependencies(backprojection_panorama ${catkin_EXPORTED_TARGETS})
 add_dependencies(backprojection_pinhole ${catkin_EXPORTED_TARGETS})
 add_dependencies(tensorrt_yolo ${catkin_EXPORTED_TARGETS})
+
 
 
 ## Specify libraries to link a library or executable target against
@@ -149,8 +159,8 @@ target_link_libraries(tensorrt_yolo
   ${QT_QTCORE_LIBRARY}
   ${QT_QTGUI_LIBRARY}
   X11
+  TrtNet
 )
-
 
 
 ## Specify libraries to link a library or executable target against
