added install macros for binaries, libs, launch and config files
Former-commit-id: f1dea40829cff92963cb86f9fc06ab8afd060af4

--- a/perception/rwth_people_tracker/rwth_ground_plane/CMakeLists.txt
+++ b/perception/rwth_people_tracker/rwth_ground_plane/CMakeLists.txt
@@ -118,11 +118,11 @@ target_link_libraries(ground_plane_tf_based_fixed
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS rwth_ground_plane rwth_ground_plane_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(TARGETS ground_plane_estimated ground_plane_fixed ground_plane_really_fixed ground_plane_tf_based_fixed
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
@@ -137,6 +137,11 @@ target_link_libraries(ground_plane_tf_based_fixed
 #   # myfile2
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  PATTERN ".svn" EXCLUDE
+)
 
 #############
 ## Testing ##
