--- a/perception/rwth_people_tracker/rwth_pedestrian_tracking/CMakeLists.txt
+++ b/perception/rwth_people_tracker/rwth_pedestrian_tracking/CMakeLists.txt
@@ -127,11 +127,11 @@ add_dependencies(pedestrian_tracking rwth_perception_people_msgs_generate_messag
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS tracking tracking_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(TARGETS pedestrian_tracking
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
@@ -146,6 +146,16 @@ add_dependencies(pedestrian_tracking rwth_perception_people_msgs_generate_messag
 #   # myfile2
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  PATTERN ".svn" EXCLUDE
+)
+
+install(DIRECTORY config/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
+  PATTERN ".svn" EXCLUDE
+)
 
 #############
 ## Testing ##
