--- a/perception/rwth_people_tracker/rwth_perception_people_launch/CMakeLists.txt
+++ b/perception/rwth_people_tracker/rwth_perception_people_launch/CMakeLists.txt
@@ -114,6 +114,11 @@ catkin_package(
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
 
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  PATTERN ".svn" EXCLUDE
+)
+
 #############
 ## Testing ##
 #############
