added install macros
Former-commit-id: 53537a70398d58eda313869e79d5739cbf37f4df

--- a/reid/CMakeLists.txt
+++ b/reid/CMakeLists.txt
@@ -155,10 +155,10 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-install(PROGRAMS
-  scripts/reid_ros.py
-  scripts/verify_reid.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+install(DIRECTORY scripts/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts
+  USE_SOURCE_PERMISSIONS
+  PATTERN ".svn" EXCLUDE
 )
 
 ## Mark executables and/or libraries for installation
