Fixing static naming of camera infos channel in yoloconvertor node. Now to setup you need to wirte the lines to the launch config. Should work by default on master branch.
Former-commit-id: cc8feece0f6409318ac85fd1080fb5bd765315a0

--- a/.gitignore
+++ b/.gitignore
@@ -210,4 +210,7 @@ qtcreator-*
 # Catkin custom files
 CATKIN_IGNORE
 
+# For development with vim
+tags
+
 # End of https://www.gitignore.io/api/ros,c++,python
