1. A lot of changes with formating the code. Ex: pedestrian trajectories 2. rwth_anntotations is not using spencer tracking messages anymore 3. Deleted files that are under version control, like "omg_file_new, ong_file_old" and so on 4. Deleted old launch files for evaluation 5. Deleted python cache files under version control 6. Added addwarp as submodule 7. Same with pwc
Former-commit-id: c70b5e3892bf304080ce1251845ca0a496a44e09

--- a/perception/rwth_people_tracker/rwth_annotationwriter/CMakeLists.txt
+++ b/perception/rwth_people_tracker/rwth_annotationwriter/CMakeLists.txt
@@ -4,7 +4,17 @@ project(rwth_annotationwriter)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS cv_bridge message_filters roscpp sensor_msgs std_msgs rwth_perception_people_msgs spencer_tracking_msgs image_transport tf)
+find_package(catkin REQUIRED COMPONENTS
+	cv_bridge
+	message_filters
+	roscpp
+	sensor_msgs
+	std_msgs
+	image_transport
+	tf
+	rwth_perception_people_msgs
+	spencer_tracking_msgs
+)
 
 find_package(Qt4 REQUIRED COMPONENTS QtCore QtGui)
 include(${QT_USE_FILE})
