Should be working metrics, but need more debug
Former-commit-id: 70619dd8b29b745fcba34d184b7b317d9136f4b8

--- a/perception/spencer_tracking_metrics_2d/CMakeLists.txt
+++ b/perception/spencer_tracking_metrics_2d/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(spencer_tracking_metrics_2d)
-find_package(catkin REQUIRED COMPONENTS rospy
-	tf
-	sensor_msgs
-	frame_msgs
-)
+find_package(catkin REQUIRED COMPONENTS rospy tf sensor_msgs frame_msgs)
 
 catkin_python_setup()
 
