--- a/perception/rwth_people_tracker/rwth_annotations/package.xml
+++ b/perception/rwth_people_tracker/rwth_annotations/package.xml
@@ -11,7 +11,7 @@
   <url type="website">http://www.vision.rwth-aachen.de/</url>
 
   <author email="breuers@vision.rwth-aachen.de">Stefan Breuers</author>
-
+  
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>message_filters</build_depend>
@@ -20,7 +20,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>rwth_perception_people_msgs</build_depend>
-  <build_depend>spencer_tracking_msgs</build_depend>
+  <build_depend>frame_msgs</build_depend>
   <build_depend>libqt4-dev</build_depend>
   <build_depend>image_transport</build_depend>
 
@@ -30,7 +30,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>rwth_perception_people_msgs</run_depend>
-  <run_depend>spencer_tracking_msgs</run_depend>
+  <run_depend>frame_msgs</run_depend>
   <run_depend>libqt4-dev</run_depend>
   <run_depend>image_transport</run_depend>
 
