--- a/perception/rwth_people_tracker/rwth_perception_people_launch/package.xml
+++ b/perception/rwth_people_tracker/rwth_perception_people_launch/package.xml
@@ -12,8 +12,9 @@
 
   <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>
   <author email="mitzel@umic.rwth-aachen.de">Dennis Mitzel</author>
-  
+
   <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>rwth_pedestrian_tracking</run_depend>
 
   <export/>
 </package>
