Rewrite detection fusion.
Former-commit-id: 7bd8e8e0c76e6e43f55a37423b21882241bddc60

--- a/detection_fusion/CMakeLists.txt
+++ b/detection_fusion/CMakeLists.txt
@@ -1,20 +1,55 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(detection_fusion)
 
+## Compile as C++11, supported in ROS Kinetic and newer
+add_compile_options(-std=c++11)
+
+## Find catkin macros and libraries
+## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
+## is used, also find other catkin packages
 find_package(catkin REQUIRED
   COMPONENTS
-    cv_bridge
+  roscpp
+  rospy
+  std_msgs
+  sensor_msgs
+  nav_msgs
+  rwth_perception_people_msgs
+  message_filters
+  frame_msgs
+  darknet_ros_msgs
+  image_transport
+  cv_bridge
+  tf)
+
+find_package(OpenCV)
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+
+set(CMAKE_BUILD_TYPE Release)
+add_compile_options(-std=c++11)
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+    add_compile_options(-O3)        ## Optimize
+endif()
+
+catkin_package(
+  INCLUDE_DIRS include
+#  LIBRARIES convert_yolo
+#  CATKIN_DEPENDS roscpp rospy std_msgs
+#  DEPENDS system_lib
 )
 
-catkin_package()
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS}
+)
 
-# catkin_install_python(
-#   PROGRAMS
-#     scripts/node.py
-#   DESTINATION
-#     ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+add_executable(detection_fusion src/detection_fusion.cpp)
 
-catkin_python_setup()
+add_dependencies(detection_fusion ${catkin_EXPORTED_TARGETS})
 
-
+target_link_libraries(detection_fusion
+ ${catkin_LIBRARIES}
+ X11
+)
