--- a/detection_fusion/config/topics.yaml
+++ b/detection_fusion/config/topics.yaml
@@ -4,20 +4,17 @@ publisher:
         queue_size: 1
         latch: false
 
-    detection_votes_image:
-        topic: /detection_votes_image
-        queue_size: 1
-        latch: false
-
 subscriber:
-    detections_yolo:
+    # Put detection sources with richer information in front (e.g. camera first, then lidar). When
+    # two detections are considered as duplicate, the one in front will be kept.
+    detections0:
         topic: /detected_persons/yolo
         queue_size: 1
 
-    detections_drow:
+    detections1:
         topic: /drow_detected_persons
         queue_size: 1
 
-    detections_drow_rear:
+    detections2:
         topic: /drow_detected_persons_rear
         queue_size: 1
