--- a/rwth_crowdbot_launch/config/eth_pepper/detection_fusion/topics.yaml
+++ b/rwth_crowdbot_launch/config/eth_pepper/detection_fusion/topics.yaml
@@ -4,21 +4,17 @@ publisher:
         queue_size: 1
         latch: false
 
-    detection_votes_image:
-        topic: /detection_votes_image
-        queue_size: 1
-        latch: false
-
 subscriber:
+    # Put detection sources with richer information in front (e.g. camera first, then lidar). When
+    # two detections are considered as duplicate, the one in front will be kept.
     detections0:
-        topic: /drow_detected_persons_front
-        queue_size: 1
-
-    detections1:
-        topic: /drow_detected_persons_rear
-        queue_size: 1
-
-    detections2:
         topic: /detected_persons/yolo
         queue_size: 1
 
+    detections1:
+        topic: /drow_detected_persons_front
+        queue_size: 1
+
+    detections2:
+        topic: /drow_detected_persons_rear
+        queue_size: 1
