Update rwth_crowdbot_launch package. Now works for eth_pepper.
Former-commit-id: 0b33b73e8c171103094e1b1e7cf03a37d233f08e

--- a/rwth_crowdbot_launch/CMakeLists.txt
+++ b/rwth_crowdbot_launch/CMakeLists.txt
@@ -5,3 +5,7 @@ find_package(catkin REQUIRED)
 
 catkin_package()
 
+install(PROGRAMS scripts/run_pwc_net_ros.sh
+  DESTINATION
+  ${CATKIN_PACKAGE_BIN_DESTINATION})
+
