--- a/rwth_crowdbot_launch/package.xml
+++ b/rwth_crowdbot_launch/package.xml
@@ -19,6 +19,7 @@
 
   <run_depend>darknet_ros</run_depend>
   <run_depend>yolo_to_3d</run_depend>
+  <run_depend>reid</run_depend>
   <run_depend>drow_ros</run_depend>
   <run_depend>detection_fusion</run_depend>
   <run_depend>rwth_pedestrian_tracking</run_depend>
