Clean up drow_ros
Former-commit-id: eba664c27960caa6b9b9c8f900336484357ef29b

--- a/drow_ros/drow_ros/config/drow_ros.yaml
+++ b/drow_ros/drow_ros/config/drow_ros.yaml
@@ -1,3 +1,4 @@
 # Path to pre-trained weight. Download from:
 # https://drive.google.com/open?id=16TjqFCJ5vT10dYPw6tpIFwsdQMZzMRbK
 weight_file: '/fastwork/jia/dumps/DROW/final-WNet3xLF2p-T5-N48-odomFalse-repeatFalse-49ep.pth.tar'
+conf_thresh: 0.2
