--- a/drow_ros/drow_ros/package.xml
+++ b/drow_ros/drow_ros/package.xml
@@ -14,4 +14,5 @@
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>drow</run_depend>
 </package>
