--- a/drow_ros/drow_ros/config/drow_ros.yaml
+++ b/drow_ros/drow_ros/config/drow_ros.yaml
@@ -1,4 +1,5 @@
 # Path to pre-trained weight. Download from:
 # https://drive.google.com/open?id=16TjqFCJ5vT10dYPw6tpIFwsdQMZzMRbK
-weight_file: '/fastwork/jia/dumps/DROW/final-WNet3xLF2p-T5-N48-odomFalse-repeatFalse-49ep.pth.tar'
-conf_thresh: 0.2
+# weight_file: '/home/jia/git_lidar/3d_obj_det/drow-v2/v3/output/fixed_cutout/ckpts/ckpt_e50.pth'
+weight_file: '/home/jia/Desktop/ckpt_e200_single_center.pth'
+conf_thresh: 0.4
