trtyolo, use smaller input resolution
Remove old engine file. It still is in the git history though, should clean it completely.

Clean up CMakeLists

Clean-up trtyolo


Former-commit-id: 101f8bf15bde9313de5817b686acda4970b5a863

--- a/trtyolo/CMakeLists.txt
+++ b/trtyolo/CMakeLists.txt
@@ -202,10 +202,10 @@ install(DIRECTORY launch/
   PATTERN ".svn" EXCLUDE
 )
 
-install(FILES
-  tensorRT_yolo/yolov3_fp16.engine
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/tensorRT_yolo
-)
+# install(FILES
+#   tensorRT_yolo/yolov3_fp16.engine
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/tensorRT_yolo
+# )
 
 #############
 ## Testing ##
