--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# TensorRT engine file
+*.engine
+
 # Created by https://www.gitignore.io/api/ros,c++,python
 # Edit at https://www.gitignore.io/?templates=ros,c++,python
 
