update topics for qolo launch
Former-commit-id: bd3b7401753f16c9c4d1ec265f4eebc5ea5ad027

--- a/rwth_crowdbot_launch/config/qolo/darknet_ros/topics.yaml
+++ b/rwth_crowdbot_launch/config/qolo/darknet_ros/topics.yaml
@@ -1,6 +1,6 @@
 subscribers:
   camera_reading:
-    topic: /camera/color/image_raw
+    topic: /camera_front/color/image_raw
     queue_size: 1
 
 actions:
