--- a/rwth_crowdbot_launch/config/qolo/drow_ros/topics.yaml
+++ b/rwth_crowdbot_launch/config/qolo/drow_ros/topics.yaml
@@ -11,5 +11,5 @@ publisher:
 
 subscriber:
     scan:
-        topic: /front_lidar/laserscan
+        topic: /front_lidar/scan
         queue_size: 1
