--- a/rwth_crowdbot_launch/config/qolo/yolo_to_3d/topics.yaml
+++ b/rwth_crowdbot_launch/config/qolo/yolo_to_3d/topics.yaml
@@ -16,11 +16,11 @@ publisher:
 
 subscriber:
     ground_plane:
-        topic: /ground_plane
+        topic: /tf_qolo
         queue_size: 1
 
     camera_info:
-        topic: /camera/color/camera_info
+        topic: /camera_front/color/camera_info
         queue_size: 1
 
     yolo_bounding_boxes:
@@ -28,9 +28,9 @@ subscriber:
         queue_size: 1
 
     image:
-        topic: /camera/color/image_raw
+        topic: /camera_front/color/image_raw
         queue_size: 1
 
     depth:
-        topic: /camera/aligned_depth_to_color/image_raw
+        topic: /camera_front/aligned_depth_to_color/image_raw
         queue_size: 1
