--- a/rwth_crowdbot_launch/package.xml
+++ b/rwth_crowdbot_launch/package.xml
@@ -17,7 +17,6 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>darknet_ros</run_depend>
   <run_depend>yolo_to_3d</run_depend>
   <run_depend>reid</run_depend>
   <run_depend>drow_ros</run_depend>
@@ -26,6 +25,8 @@
   <run_depend>spencer_tracking_rviz_plugin</run_depend>
   <run_depend>trtyolo</run_depend>
   <run_depend>rwth_ground_plane</run_depend>
+
+<!--   <run_depend>darknet_ros</run_depend>
   <run_depend>addwarp</run_depend>
-  <run_depend>pwc_net_ros</run_depend>
+  <run_depend>pwc_net_ros</run_depend> -->
 </package>
