Updated for QOLO
Former-commit-id: 5deadcda402233bb1d18facda6c0281d213d48ee

--- a/rwth_crowdbot_launch/config/qolo/detection_fusion/detection_fusion.yaml
+++ b/rwth_crowdbot_launch/config/qolo/detection_fusion/detection_fusion.yaml
@@ -7,7 +7,7 @@ enforce_all: false
 # creating subscribers.
 number_of_detection_source: 2
 # The fused detections are transformed into, fused, and published in fixed frame.
-world_frame: "tf_qolo"
+world_frame: "tf_qolo_world"
 # Detections (from different sensor) with distance lower than this value are
 # considered as duplicate.
 overlap_thresh: 0.5
