--- a/rwth_crowdbot_launch/config/qolo/detection_fusion/topics.yaml
+++ b/rwth_crowdbot_launch/config/qolo/detection_fusion/topics.yaml
@@ -12,5 +12,10 @@ subscriber:
         queue_size: 1
 
     detections1:
-        topic: /drow_detected_persons
+        topic: /drow_detected_persons_front
         queue_size: 1
+
+    detections2:
+        topic: /drow_detected_persons_rear
+        queue_size: 1
+
