add option to limit detection range
Former-commit-id: 13e4d4f46c05a1c8a9f964080ab173560c8aa0b8

--- a/detection_fusion/config/topics.yaml
+++ b/detection_fusion/config/topics.yaml
@@ -10,6 +10,8 @@ subscriber:
     detections0:
         topic: /detected_persons/yolo
         queue_size: 1
+        range_min: 0.0
+        range_max: 100.0
 
     detections1:
         topic: /drow_detected_persons
