add qolo_bag.launch for playing bag files
Former-commit-id: 6601586c5afc76c2eb61095895f9807be7818a25

--- a/rwth_crowdbot_launch/config/qolo/detection_fusion/topics.yaml
+++ b/rwth_crowdbot_launch/config/qolo/detection_fusion/topics.yaml
@@ -10,11 +10,17 @@ subscriber:
     detections0:
         topic: /detected_persons/yolo
         queue_size: 1
+        range_min: 0
+        range_max: 500
 
     detections1:
         topic: /drow_detected_persons_front
         queue_size: 1
+        range_min: 1
+        range_max: 500
 
     detections2:
         topic: /drow_detected_persons_rear
         queue_size: 1
+        range_min: 1
+        range_max: 500
